public/project/css/style.css
/* ... */
html,
body {
  height: 100%;
  width: 100%;
  font-size: 100%;
  line-height: 1;
  -ms-text-size-adjust: 100%;
  -moz-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
}

input,
button,
textarea {
  font-family: inherit;
}

input::-ms-clear {
  display: none;
}

button {
  cursor: pointer;
}

button::-moz-focus-inner {
  padding: 0;
  border: 0;
}

a,
a:visited {
  text-decoration: none;
}

a {
  color: #000000;
}

a:hover {
  text-decoration: none;
}

ul li {
  list-style-type: none;
}

img {
  vertical-align: top;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-size: inherit;
  font-weight: 400;
}

/*--------------------*/

*,
*::before,
*::after {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

html {
  --width__nav-item: 0px;
}

body {
  font-family: "Geometria";
  font-weight: 400;
  font-size: 16px;
}

.title {
  font-size: 24px;
  font-weight: 700;
  color: #002850;
}

#map_city {
  flex: 0 0 58.3%;
  height: calc(100vh - 114px - 18px) !important;
}

#map_city .ymaps-2-1-79-map-copyrights-promo {
  display: none;
}

#map_city .ymaps-2-1-79-copyright {
  display: none;
}

.city-col::-webkit-scrollbar {
  width: 15px;
}

.city-col::-webkit-scrollbar-track {
  background: #f6f8fc;
}

.city-col::-webkit-scrollbar-thumb {
  background: #e3e9f6;
}

.city {
  display: block;
}

.city__content {
  display: flex;
}

.city__content.city_map {
  height: calc(var(--vh, 1vh) * 100 - 134px);
}

.city-col {
  overflow-y: auto;
  height: calc(100vh - 114px - 18px);
  border-top: 1px solid #e3e9f6;
  padding-top: 10px;
  display: none;
  position: relative;
  flex: 1;
}

.city-col.active {
  display: block;
}

.city-col__top {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  align-items: center;
  padding-left: 20px;
  padding-right: 20px;
}

.city-col__title {
  line-height: 24px;
  margin-right: 10px;
}

.city-col__subtitle {
  color: #c2c2c2;
  flex: 0 0 100%;
  margin-top: 5px;
  margin-bottom: 15px;
}

.city-col__filter {
  color: #022a51;
  position: relative;
  border-radius: 5px;
  border: 1px solid #e3e9f6;
  padding: 10px 40px 10px 12px;
  font-size: 15px;
  cursor: pointer;
}

.city-col__filter.active::after {
  transform: rotate(0deg);
}

.city-col__filter::after {
  content: "";
  position: absolute;
  width: 9px;
  height: 6px;
  background: url(../img/check.png);
  background-size: cover;
  background-repeat: no-repeat;
  top: 15px;
  right: 14px;
  transform: rotate(180deg);
  transition: 0.2s;
}

.city-col__filter-list {
  display: none;
  position: absolute;
  left: 0px;
  top: 40px;
  border: 1px solid #e3e9f6;
  font-size: 15px;
  width: 100%;
  padding: 19px 0px 16px 12px;
  border-radius: 5px;
  z-index: 6;
  background: #ffffff;
}

.city-col__filter-list.active {
  display: block;
}

.city-col__filter-item {
  color: #022a51;
  transition: 0.2s;
}

.city-col__filter-item:not(:last-child) {
  margin-bottom: 13px;
}

.city-col__filter-item:hover {
  color: #508cfa;
}

.city-col__btns {
  background: #508cfa;
  border-radius: 18px;
  display: flex;
  padding: 3px;
  justify-content: space-between;
}

.city-col__btn {
  cursor: pointer;
  border-radius: 15px;
  transition: 0.2s;
  color: #ffffff;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
}

.city-col__btn.active {
  background: #ffffff;
  color: #508cfa;
}

.city-col__all {
  margin-right: 6px;
  padding: 10px 27px;
}

.city-col__builder {
  padding: 9px 21px;
}

.city-col__content {
  margin-top: 20px;
  padding-left: 20px;
  padding-right: 21px;
}

.city-col__list {
  display: flex;
  flex-wrap: wrap;
}

.city-col__item {
  max-width: 48.7%;
  border-radius: 5px;
  margin-bottom: 20px;
  display: flex;
  flex-direction: column;
  position: relative;
  cursor: pointer;
}

.city-col__item-img img {
  width: 100%;
}

.city-col__item-text {
  line-height: 24px;
  border-bottom: 1px solid #e3e9f6;
  border-left: 1px solid #e3e9f6;
  border-right: 1px solid #e3e9f6;
  border-radius: 0px 0px 5px 5px;
  padding-top: 15px;
  padding-left: 19px;
  padding-right: 8px;
  flex: 1;
}

.city-col__item-price {
  font-size: 24px;
  color: #002850;
  font-weight: 700;
  margin-bottom: 3px;
}

.city-col__item-rooms {
  color: #002850;
  font-size: 15px;
}

.city-col__item-rooms span {
  color: #c2c2c2;
  margin: 0 4px;
}

.city-col__item-address {
  color: #c2c2c2;
  font-size: 15px;
  margin-bottom: 14px;
  line-height: 21px;
}

.city-col__bottom {
  padding-left: 20px;
  padding-right: 36px;
}

.city-col__bottom-btns {
  display: flex;
  align-items: center;
  margin-top: 20px;
  justify-content: center;
}

.city-col__bottom-prev {
  height: 9px;
  cursor: pointer;
}

.city-col__bottom-prev img:last-child {
  display: none;
  transform: rotate(180deg);
}

.city-col__bottom-prev.active img:first-child {
  display: none;
}

.city-col__bottom-prev.active img:last-child {
  display: block;
}

.city-col__pages_m {
  display: none;
  color: #002850;
  margin: 0 126px;
}

.city-col__bottom-pages {
  display: flex;
  justify-content: space-between;
  margin: 0 35px;
}

.city-col__bottom-number {
  color: #002850;
  padding: 11px 22px;
  border-radius: 5px;
  border: 1px solid #e3e9f6;
  display: flex;
  justify-content: center;
  align-items: center;
  max-width: 50px;
  transition: 0.2s;
  cursor: pointer;
}

.city-col__bottom-number:not(:last-child) {
  margin-right: 10px;
}

.city-col__bottom-number.active {
  color: #ffffff;
  border: none;
  background: #508cfa;
}

.city-col__bottom-next {
  height: 9px;
  cursor: pointer;
}

.city-col__bottom-next img:first-child {
  display: block;
  transform: rotate(180deg);
}

.city-col__bottom-next img:last-child {
  display: none;
}

.city-col__bottom-next.active img:first-child {
  display: none;
}

.city-col__bottom-next.active img:last-child {
  display: block;
}

.favorite-item-btn {
  position: absolute;
  cursor: pointer;
  width: 20px;
  height: 18px;
  top: 10px;
  right: 10px;
}
/* ... */

